[tool.poetry]
name = "transpire"
version = "0.1.0"
description = "the OCF Kubernetes helper library"
authors = ["Nikhil Jha <njha@ocf.berkeley.edu>"]
license = "Apache-2.0"

[tool.poetry.scripts]
transpire = 'transpire.__main__:cli'

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0"           # make sure to bump types-PyYAML as well
kubernetes = "^25.3.0"    # make sure to bump kubernetes-typed as well
click = "^8.1.3"
loguru = "^0.6.0"
pydantic = "^1.9.0"
hera-workflows = "^4.0.1"
hvac = "^1.0.2"
requests = "^2.28.2"
pyjq = "^2.6.0"

[tool.poetry.dev-dependencies]
black = { version = "^22.12.0", allow-prereleases = true }
mypy = { git = "https://github.com/python/mypy.git", rev = "07f672148d2c3365b8fe3e879bee7c0d9936fb11" }
types-PyYAML = "^6.0.4"
kubernetes-typed = { git = "https://github.com/nikhiljha/kubernetes-typed.git", tag = "v25.3.0" }
types-requests = "^2.28.2"
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
coverage = { version = "^6.3.2", extras = ["toml"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["transpire"]
branch = true
