[project]
name = "transpire"
version = "0.2.0"
description = "the OCF Kubernetes helper library"
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
authors = [
  { name = "Nikhil Jha", email = "njha@ocf.berkeley.edu" },
]

dependencies = [
  "PyYAML>=6.0,<7.0",
  "kubernetes>=25.3.0,<26.0.0",
  "click>=8.1.3,<9.0.0",
  "loguru>=0.7.2,<0.8.0",
  "pydantic>=2.7.0,<3.0.0",
  "hvac>=1.0.2,<2.0.0",
  "requests>=2.28.2,<3.0.0",
  "tomlkit>=0.12.4,<0.13.0",
]

[project.scripts]
transpire = "transpire.__main__:cli"

# PEP 735 dependency groups (uv supports these)
[dependency-groups]
dev = [
  "mypy>=1.2.0,<2.0.0",
  "black>=22.12.0,<23.0.0",
  "types-PyYAML>=6.0.4,<7.0.0",
  # Git dependency via PEP 508 direct URL reference
  "kubernetes-typed @ git+https://github.com/nikhiljha/kubernetes-typed.git@v25.3.0",
  "types-requests>=2.28.2,<3.0.0",
  "flake8>=6.0.0,<7.0.0",
  "isort>=5.11.4,<6.0.0",
  "pre-commit>=4.1.0,<5.0.0",
  "pytest>=7.2.1,<8.0.0",
  "coverage[toml]>=6.3.2,<7.0.0",
]

# Use a non-Poetry build backend (hatchling is a common choice with uv)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["transpire"]
branch = true

